--- a/style.css
+++ b/style.css
@@ -11,14 +11,6 @@ body{
     align-items: center;
 }
 
-.tests{
-    width: 100%;
-}
-
-.blue{
-    color: rgb(0, 121, 219);
-}
-
 .download-button {    
     background-color: rgb(0, 121, 219);
     color: white;
@@ -27,7 +19,7 @@ body{
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-    margin-top: 10px;
+    margin: 20px;
     padding: 13px;
 }
 
@@ -36,12 +28,10 @@ body{
 }
 
 .table-container {
-    /* display: none; */
     width: 100%;
     max-width: 1000px;
     overflow-x: auto;
     overflow-y: hidden;
-    white-space: nowrap;
     margin-bottom: 20px;
 }
 
