--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body{
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .top-main{
@@ -28,6 +32,7 @@ body{
 }
 
 .table-container {
+    text-align: center;
     width: 100%;
     max-width: 1000px;
     overflow-x: auto;
